make changes to app.html, style.css and add background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,219 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
-    font-family: 'Handwriting';
-    src: url(../fonts/DrewHandwriting2.ttf);
+  font-family: "Handwriting";
+  src: url(../fonts/DrewHandwriting2.ttf);
+}
+
+body {
+  background-image: url("../images/background-img.JPG");
+}
+
+.header {
+  margin: 1rem 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header ul {
+  list-style: none;
+  display: flex;
+  gap: 0.5rem;
+}
+
+a:link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.search-box {
+  margin-bottom: 1rem;
+  width: 70vw;
+}
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.search-bar {
+  position: relative;
+  margin-bottom: 0.5rem;
+}
+
+.search-bar input {
+  width: 100%;
+  border: none;
+  padding: 0.75rem 0.5rem;
+}
+
+.glass-icon {
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.75rem 0.5rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.btn-group button {
+  background-color: #fff;
+  width: 5rem;
+  height: 2rem;
+  border: none;
+  border-radius: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+#plus-btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  font-size: 1rem;
+  color: white;
+  background-color: #9fbe6b;
+}
+
+.intro {
+  width: 70vw;
+  height: auto;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  position: relative;
+  padding: 1rem;
+  line-height: 1.7rem;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.item-status {
+  list-style: none;
+  margin-right: 4rem;
+}
+
+.item-status li {
+  margin-bottom: 0.5rem;
+}
+.item-status input {
+  margin-left: 0;
+}
+
+.fa-user {
+  margin-right: 0.2rem;
+}
+
+.calendar {
+  background-color: #9fbe6b;
+  width: 1.5rem;
+  height: 1.5rem;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 1.5rem;
+  left: -1.5rem;
+}
+
+.calendar .fa-calendar-days {
+  color: white;
+}
+
+.details {
+  width: 70%;
+  margin-bottom: 1rem;
+}
+
+.add-item-btn,
+.confirm-btn {
+  width: 70vw;
+  height: 5vh;
+  border-radius: 0.4rem;
+  border: none;
+  cursor: pointer;
+  background-color: #bfbfbf;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.fa-circle-plus {
+  margin-left: 0.3rem;
+}
+
+.create-item {
+  background: transparent;
+}
+
+.create-item-content {
+  width: 70vw;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
+  line-height: 1.7rem;
+}
+
+.left,
+.right {
+  list-style: none;
+}
+
+.left {
+  width: 70%;
+  margin-bottom: 1rem;
+}
+
+.left input {
+  width: 100%;
+  border: none;
+}
+
+.left li {
+  padding: 0.5rem;
+}
+
+.visually-hidden {
+  display: none;
+}
+
+.right {
+  padding-top: 0.5rem;
+}
+
+.left input,
+.right input {
+  border: none;
+  border-bottom: 1px solid lightgray;
+}
+
+.due-date {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+input[type="checkbox"] {
+  margin-right: 0.2rem;
 }
