Update Simplist tagline spacing, edit button spacing
Updated spacing for button and Simplist logo + tagline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,11 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 15px;
+}
 
-
+.brand-tag {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
