--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,19 @@ input[type="checkbox"] {
     color: #101111;
 }
 
+.branding {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
 h2 {
   font-size: 6rem;
   font-family: "Handwriting", serif;
+}
+
+h3 {
+  font-weight: 500;
+  font-family: "Darker Grotesque", serif;
+  font-size: 2.25rem;
 }
