--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,24 @@
 
 body {
   background-image: url("../images/background-img.JPG");
+  /* background-image: linear-gradient(#778487cc, #778487cc),
+    url("../images/background-img.JPG"); */
+  min-height: 100vh;
+  font-family: "Darker Grotesque", serif;
 }
 
+/* ---------------------- */
+/* NAV BAR */
 .header {
+  color: #101111;
   margin: 1rem 1rem;
   display: flex;
   justify-content: space-between;
+}
+
+h1 {
+  font-family: "Handwriting", serif;
+  font-size: 3rem;
 }
 
 .header ul {
@@ -30,12 +42,23 @@ a:link {
   color: #101111;
   font-weight: bold;
   font-size: 1.5rem;
-  font-family: 'Darker Grotesque', sans-serif;
+  font-family: "Darker Grotesque", sans-serif;
 }
 
+/* MAIN */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+/* ---------------------- */
+/* SEARCH BOX */
 .search-box {
   margin-bottom: 1rem;
   width: 70vw;
+  color: #212121;
 }
 
 [type="search"]::-webkit-search-cancel-button,
@@ -62,18 +85,17 @@ a:link {
   position: absolute;
   top: 0;
   right: 0;
-  padding: 0.75rem 0.5rem;
+  padding: 1.18rem 0.5rem;
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+#item-search {
+  border-radius: 0.5rem;
+  height: 7vh;
+  font-size: 1.5rem;
 }
 
 .tag-group button {
-  background-color: #fff;
+  background-color: #ffffff;
   width: 5rem;
   height: 2rem;
   border: none;
@@ -88,14 +110,17 @@ main {
   width: 2rem;
   height: 2rem;
   font-size: 1rem;
-  color: white;
+  color: #ffffff;
   background-color: #9fbe6b;
 }
 
+/* ---------------------- */
+/* INTRO */
 .intro {
   width: 70vw;
   height: auto;
-  background-color: #fff;
+  color: #212121;
+  background-color: #ffffff;
   border-radius: 0.5rem;
   position: relative;
   padding: 1rem;
@@ -106,6 +131,20 @@ main {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+input[type="checkbox"] {
+  margin-right: 0.2rem;
 }
 
 .item-status {
@@ -126,17 +165,17 @@ main {
 
 .calendar {
   background-color: #9fbe6b;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.8rem;
+  height: 1.8rem;
   border: none;
   cursor: pointer;
   position: absolute;
   top: 1.5rem;
-  left: -1.5rem;
+  left: -1.8rem;
 }
 
 .calendar .fa-calendar-days {
-  color: white;
+  color: #ffffff;
 }
 
 .details {
@@ -144,18 +183,24 @@ main {
   margin-bottom: 1rem;
 }
 
+/* ---------------------- */
+/* CREATE NEW ITEM */
 .add-item-btn,
 .confirm-btn {
   width: 70vw;
-  height: 5vh;
-  border-radius: 0.4rem;
+  height: 7vh;
+  border-radius: 0.5rem;
   border: none;
   cursor: pointer;
+  color: #373737;
   background-color: #bfbfbf;
   font-size: 1rem;
   font-weight: bold;
 }
 
+.confirm-btn {
+  margin-bottom: 2rem;
+}
 .fa-circle-plus {
   margin-left: 0.3rem;
 }
@@ -166,7 +211,8 @@ main {
 
 .create-item-content {
   width: 70vw;
-  background-color: #fff;
+  color: #212121;
+  background-color: #ffffff;
   border-radius: 0.5rem;
   padding: 1rem;
   display: flex;
@@ -203,23 +249,25 @@ main {
   padding-top: 0.5rem;
 }
 
+#assign,
+#deadline {
+  font-size: 1rem;
+  width: 60%;
+  color: #757575;
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
 .left input,
 .right input {
   border: none;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid #bfbfbf;
 }
 
-.due-date {
-  background-color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-input[type="checkbox"] {
-  margin-right: 0.2rem;
-}
-
-h1 {
-    font-family: "Handwriting", serif;
-    font-size: 3rem;
+input[type="text"] {
+  font-size: 1rem;
 }
