--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,10 +134,20 @@ main {
   position: absolute;
   top: 1.5rem;
   left: -1.5rem;
+  border-radius: .125rem;
+  transition: .5s;
+}
+
+.calendar:hover {
+  transition-duration: .5s;
+  width: 5rem;
+  left: -5rem;
 }
 
 .calendar .fa-calendar-days {
   color: white;
+  display: flex;
+  padding-left: .5rem;
 }
 
 .details {
@@ -243,6 +253,19 @@ h3 {
   font-weight: 500;
   font-family: "Darker Grotesque", serif;
   font-size: 2.25rem;
+}
+
+h4 {
+  font-weight: 900;
+  font-size: 2.5rem;
+  color: #212121;
+  font-family: "Darker Grotesque", serif;
+  padding-bottom: .5rem;
+  line-height: 135%;
+}
+
+.details p {
+  padding-bottom: 1rem;
 }
 
 .simplist-button {
