--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-image: url("../images/background-img.JPG");
 }
 
@@ -9,7 +9,7 @@ body {
 }
 
 .row {
-  display: flex; /* default is row */
+  display: flex;  default is row 
 }
 .column {
   display: flex;
@@ -19,4 +19,4 @@ body {
 .Imagegroup1, 
 .Imagegroup2{
   width: 100px;
-}
+} */
