--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,22 +1,62 @@
-body {
-  background-image: url("../images/background-img.JPG");
+/* fonts */
+@font-face {
+  font-family: "Handwriting";
+  src: url(../fonts/DrewHandwriting2.ttf);
 }
 
-.header {
+/*Nav Bar */
+#navBarLogo {
+  font-family: "Handwriting", sans-serif;
+  font-size: 4.8rem;
+}
+
+/* Header */
+header {
+  color: #101111;
   margin: 1rem 1rem;
   display: flex;
   justify-content: space-between;
 }
 
+/* Main */
+main {
+  text-align: justify;
+  padding-right: 345px;
+  padding-left: 345px;
+  padding-bottom: 47px;
+}
+
+/*Body*/
+body {
+  background-image: url("../images/background-img.JPG");
+}
+
+#founderbio {
+  font-size: 1.45em;
+}
+
+/*Used for images and name tags */
 .row {
   display: flex; /* default is row */
+  justify-content: center;
 }
 .column {
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 .Imagegroup1, 
 .Imagegroup2{
   width: 100px;
+}
+
+
+/* Get Started for free button */
+.button {
+  font-size: 2.5rem;
+  font-family: "Darker Grotesque";
+  text-align: center;
+  margin: 0 auto;
+  display: block;
 }
