--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,3 +243,11 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+
+.tagline {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 5px;
+}
+
