--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -42,16 +42,32 @@ a {
 }
 
 /* Header */
-title {
+#title {
   color: #101111;
-  margin: 1rem 1rem;
-  display: flex;
-  justify-content: center;
+  text-align: center;
+  font-size: 96px;
+  font-family: "Handwriting", sans-serif;
+}
+
+/*h2 */
+
+h2{
+  margin: 0;
+  padding: 0;
+  font-size: 96px;
+}
+
+/* Sub Header */
+#h3 {
+  margin-top: -1px;
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 40px;
+  display: center;
 }
 
 /* Main */
 main {
-  text-align: justify;
+  
   padding-right: 345px;
   padding-left: 345px;
   padding-bottom: 47px;
@@ -68,6 +84,7 @@ body {
   font-size: 1.45em;
   font-family: "Darker Grotesque", sans-serif;
   color: #101111;
+  text-align: justify;
 }
 
 /* Page title */
@@ -75,6 +92,7 @@ body {
   font-size: 96px;
   font-family: "Handwriting", sans-serif;
 }
+
 /*Used for images and name tags */
 .row {
   display: flex; /* default is row */
@@ -82,6 +100,7 @@ body {
   margin-right: 299px;
   margin-left: 299px;
 }
+
 .column {
   display: flex;
   flex-direction: column;
