--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -43,33 +43,40 @@ a {
 
 /* Header */
 #title {
+  display: flex;
+  justify-content: center;
   color: #101111;
   text-align: center;
   font-size: 96px;
   font-family: "Handwriting", sans-serif;
+  white-space: nowrap;
 }
 
 /*h2 */
 
 h2{
   margin: 0;
-  padding: 0;
+  padding: 30px;
   font-size: 96px;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Sub Header */
 #h3 {
-  margin-top: -1px;
+  margin-top: -50px;
   font-family: "Darker Grotesque", sans-serif;
   font-size: 40px;
   display: center;
+  text-align: center;
+  margin-bottom: 47px;
 }
 
 /* Main */
 main {
   
-  padding-right: 345px;
-  padding-left: 345px;
+  padding-right: 350px;
+  padding-left: 350px;
   padding-bottom: 47px;
 }
 
@@ -81,10 +88,12 @@ body {
 }
 
 #founderbio {
-  font-size: 1.45em;
+  font-size: 24px;
   font-family: "Darker Grotesque", sans-serif;
   color: #101111;
   text-align: justify;
+  font-weight: 500;
+  vertical-align: top;
 }
 
 /* Page title */
@@ -114,23 +123,25 @@ body {
 
 .Imagegroup2 {
   width: 100px;
-
+  padding-bottom: 159px;
 }
 
 .NameTag1 {
   padding-top: 101px;
   padding-bottom: 15px;
-  font-family: "Darker Grotesque", sans-serif;
+  font-family: "Handwriting", sans-serif;
   font-size: 24px;
   color: #101111;
+  font-weight: bold;
 }
 
 .NameTag2 {
   padding-bottom: 15px;
   padding-top: 86px;
-  font-family: "Darker Grotesque", sans-serif;
+  font-family: "Handwriting", sans-serif;
   font-size: 24px;
   color: #101111;
+  font-weight: bold;
 }
 
 
@@ -144,7 +155,7 @@ body {
   display: block;
   width: 519px; 
   height: 67px;
-  border-radius: 1.3rem;
+  border-radius: 8px;
   border: none;
   cursor: pointer;
   color: #373737;
