--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,25 +77,55 @@ h3 {
   line-height: 5.4rem;
 }
 
+h4 {
+  font-family: 'Darker Grotesque', sans-serif;
+  font-weight: 500;
+  font-size: 3.6rem;
+  line-height: 4.9rem;
+}
+
 p {
   font-size: 2.4rem;
   margin-bottom: 1.6rem;
 }
 
 /* HERO */
+.branding {
+  display: flex;
+  align-items: flex-end;
+}
+
+.branding h4 {
+  padding: 1.6rem;
+}
+
 .card-display {
   display: flex;
   align-items: center;
 }
 
 .card {
-  margin: .8rem 3.2rem 4rem 3.2rem;
+  margin: .8rem 0 4rem 0;
   width: 70%;
 }
 
 .arrows {
   height: min-content;
   width: min-content;
+  padding: 0 3.2rem;
+}
+
+.home-position {
+  position: absolute;
+  left: -15rem;
+  top: 4rem;
+  padding: 0;
+}
+
+.home-position.arrows.flip {
+  left: 86rem;
+  top: 3rem;
+  padding: 0;
 }
 
 /* ---------------------- */
@@ -165,7 +195,7 @@ p {
 /* ---------------------- */
 /* INTRO */
 .intro {
-  width: 70vw;
+  width: 81.6rem;
   height: auto;
   color: #212121;
   background-color: #ffffff;
@@ -204,7 +234,7 @@ input[type="checkbox"] {
 .calendar {
   background-color: #9fbe6b;
   border: none;
-  border-radius: .4rem;
+  border-radius: .4rem 0 0 .4rem;
   width: 3rem;
   height: 3rem;
   cursor: pointer;
@@ -226,7 +256,7 @@ input[type="checkbox"] {
 }
 
 .details {
-  width: 70%;
+  width: 54.8rem;
   margin-bottom: 1.6rem;
 }
 
