--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,11 +111,6 @@ p {
   padding: 1.6rem;
 }
 
-.card {
-  margin: .8rem 0 4rem 0;
-  width: 70%;
-}
-
 .arrows {
   height: min-content;
   padding: 0 3.2rem;
@@ -254,7 +249,7 @@ p {
 }
 
 /* ------------ INTRO ------------ */
-.intro {
+.card {
   background-color: #ffffff;
   border-radius: 1.3rem;
   color: #212121;
@@ -265,7 +260,7 @@ p {
   width: 81.6rem;  
 }
 
-.container {
+.card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
