--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,3 +426,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   -webkit-appearance: none;
   display: none;
 }
+
+
+
+
+/* Error Messages */
+
+.errorFonts {
+  font-family: ;
+}
