updated Error messages onto my new branch
updated Error messages onto my new branch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,3 +426,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   -webkit-appearance: none;
   display: none;
 }
+
+/* Error Messages */
+
+.errorFonts {
+  color: #F8380E;
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
