Update and connect validation
I connected all the files together. Now Everything should be working in terms of validation and creating an object and pushing it to the task manager

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,10 @@ main {
   transform: rotate(180deg);
 }
 
+.hidden {
+  display: none;
+}
+
 h2 {
   font-size: 9.6rem;
   font-family: 'Handwriting', serif;
